# sensors_controller_simulation

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
controller/: CMakeLists.txt  main.cpp
controller/HTTPSAPI/: APIFactory.cpp  APIFactory.h  DecisionHandler.cpp  DecisionHandler.h
controller/ManipulatorCommunicator/: ManipulatorCommunicator.cpp  ManipulatorCommunicator.h
controller/SensorDataConsumer/: Decision.h  DecisionNotification.h  SensorDataConsumer.cpp  SensorDataConsumer.h
controller/SensorTCPConnection/: SensorTCPConnection.cpp  SensorTCPConnection.h  SensorTCPConnectionFactory.cpp  SensorTCPConnectionFactory.h
controller/common/: DeathPillNotification.h
docker/: .env  builtCppPoco.Dockerfile  docker-compose.yml  httpsproxy.Dockerfile  server.Dockerfile
manipulator/: CMakeLists.txt  main.cpp
nginx/config/: nginx.conf
sensor/: CMakeLists.txt  main.cpp
server/: app.py  config.py  requirements.txt
server/templates/: index.html.j2
